src/layout/Header.scss
header {
  padding: 29px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 36px;
  user-select: none;
  transition: gap 0.3s;

  a {
    text-decoration: none;
    color: var(--text-h);
    font-weight: 750;
    font-size: 18px;
  }

  a:hover {
    color: var(--accent);
  }

  .header-logo {
    cursor: pointer;

    &:hover {
      animation: wiggle 0.6s ease-in-out infinite;
    }
  }

  @keyframes wiggle {
    0% {
      transform: rotate(0deg);
    }
    25% {
      transform: rotate(20deg);
    }
    75% {
      transform: rotate(-20deg);
    }
    100% {
      transform: rotate(0deg);
    }
  }

  @media (max-width: 600px) {
    flex-direction: flex;
    gap: 18px;
    padding: 18px;
    transition: gap 0.3s;
  }
}

